Add option to hide sprite padding in atlas display